Adjusted home page alignment and fixed global footer issue on responsive

--- a/assets/styles/common/_global.scss
+++ b/assets/styles/common/_global.scss
@@ -61,6 +61,9 @@ body {
   padding-bottom: $footer-height;
   min-height: 100%;
   position: relative;
+  @media screen and (max-width: $screen-sm) {
+    padding-bottom: $footer-height-sm;
+  }
 }
 .container {
   padding: 0px 70px;
