--- a/assets/styles/common/_variables.scss
+++ b/assets/styles/common/_variables.scss
@@ -28,3 +28,4 @@ $primary-font:          "Proxima-Nova", "Open Sans","Gill Sans MT","Gill Sans",C
 
 // Global Heights
 $footer-height: 97px;
+$footer-height-sm: 146px;
