--- a/assets/styles/components/_cards.scss
+++ b/assets/styles/components/_cards.scss
@@ -36,6 +36,7 @@ $card-padding: 25px 20px;
     }
     &--one-third {
       flex-grow: 1;
+      width: 33.3%;
     }
     &--has-image {
       background-position: center center;
